--- a/src/common/stylus/bg-image.styl
+++ b/src/common/stylus/bg-image.styl
@@ -7,3 +7,8 @@ bg-image-1($name)
   background-image: url($name + '_1@2x.png')
   @media only screen and (-webkit-min-device-pixel-ratio: 3) and (min-device-pixel-ratio: 3)
     background-image: url($name + '_1@3x.png')
+
+bg-image-2($name)
+  background-image: url($name + '_2@2x.png')
+@media only screen and (-webkit-min-device-pixel-ratio: 3) and (min-device-pixel-ratio: 3)
+  background-image: url($name + '_2@3x.png')
