--- a/src/common/stylus/mix.styl
+++ b/src/common/stylus/mix.styl
@@ -9,6 +9,17 @@ border-1px-top($color)
     left: 0
     border-top: 1px solid $color
 
+border-1px-bottom($color)
+  position: relative
+  &::after
+    display: block
+    position: absolute
+    width: 100%
+    content: ''
+    bottom: 0
+    left: 0
+    border-bottom: 1px solid $color
+
 border-2px-left($color)
   position: relative
   &::after
