商家详情页面及数据存储

--- a/src/common/stylus/mix.styl
+++ b/src/common/stylus/mix.styl
@@ -5,7 +5,7 @@ border-1px-top($color)
     position: absolute
     width: 100%
     content: ''
-    bottom: 0
+    top: 0
     left: 0
     border-top: 1px solid $color
 
